# nijisanji-stream-playlist-creator

./: Pipfile  README.md  get_token.py  main.py  niji_dict.csv  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  cron.yml
modules/: nijisanji.py  opeapi.py  youtube.py  youtube_direct.py
