[project]
name = "nijisanji-stream-playlist-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.159.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "janome>=0.5.0",
    "lingua-language-detector>=1.4.0",
    "oauth2client>=4.1.3",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "selenium>=4.28.0",
]
