[project]
name = "nijisanji-stream-playlist-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.4"
dependencies = [
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "janome>=0.5.0",
    "lingua-language-detector>=2.2.0",
    "oauth2client>=4.1.3",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "requests>=2.33.1",
    "selenium>=4.41.0",
]
