[project]
name = "nijisanji-stream-playlist-creator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.6"
dependencies = [
    "google-api-python-client>=2.197.0",
    "google-auth-httplib2>=0.4.0",
    "google-auth-oauthlib>=1.4.0",
    "janome>=0.5.0",
    "lingua-language-detector>=2.2.0",
    "oauth2client>=4.1.3",
    "pyvirtualdisplay>=3.0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "selenium>=4.44.0",
]
